<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/md_green_400"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.auth.AuthFragment">

    <LinearLayout
        android:id="@+id/topPanel"
        android:layout_marginTop="60dp"
        android:layout_marginStart="30dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/welcome_back_login_page_text"
            android:textColor="@color/md_white_1000"
            android:fontFamily="@font/pt_sans"
            android:textSize="28dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/login_to_continue_usng_the_app_text"
            android:textColor="@color/md_white_1000"
            android:fontFamily="@font/pt_sans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_below="@id/topPanel"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_marginTop="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_text">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forgotPassword"
            android:text="@string/forgot_password_text"
            android:layout_marginTop="5dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="38dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            android:text="@string/login_btn_text"
            android:layout_marginTop="20dp"
            app:cornerRadius="20dp"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/or_login_via_text"
                android:textSize="17dp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/google"
                android:layout_marginTop="30dp"
                app:backgroundTint="@color/colorPrimary"
                android:textColor="@color/white"
                app:iconTint="@color/white"
                android:textAllCaps="false"
                android:text="@string/other_login_methods_btn_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_gravity="center"
            android:text="@string/don_t_have_an_account_text"
            android:textColor="@color/md_white_1000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup"
            android:text="@string/signup_text"
            android:textStyle="bold"
            android:textColor="@color/md_white_1000"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_gravity="center_horizontal"
            android:layout_width="70dp"
            android:layout_height="38dp"/>


    </LinearLayout>

</RelativeLayout>